--- a/src/config/common.yaml
+++ b/src/config/common.yaml
@@ -1,5 +1,5 @@
 ---
-gameTitle: Narrat Game Example
+gameTitle: Malaga Jam 19!!!!!!!
 saveFileName: Narrat Empty
 images: {}
 dialogPanel:
@@ -41,7 +41,7 @@ interactionTags:
 saves:
   mode: manual
   slots: 10
-  runOnReload: 'test_label_reload'
+  runOnReload: "test_label_reload"
   autosaveDisabledOnLabels:
     - test_no_autosave
   allowManualSave: true
@@ -49,8 +49,8 @@ saves:
     enabled: true
     duration: 0.5
     text: saving...
-    backgroundImage: 'img/ui/autosave_spinner_background.png'
-    foregroundImage: 'img/ui/autosave_spinner.png'
+    backgroundImage: "img/ui/autosave_spinner_background.png"
+    foregroundImage: "img/ui/autosave_spinner.png"
 menuButtons:
   new-game:
     text: Start a new game
