feat: background image

--- a/src/config/screens.yaml
+++ b/src/config/screens.yaml
@@ -2,4 +2,4 @@ screens:
   default:
     background: img/backgrounds/curtain.webp
   game:
-    background: img/backgrounds/map.webp
+    background: img/backgrounds/park.JPG
