--- a/src/config/screens.yaml
+++ b/src/config/screens.yaml
@@ -3,3 +3,5 @@ screens:
     background: img/backgrounds/curtain.webp
   game:
     background: img/backgrounds/map.webp
+  parque:
+    background: img/backgrounds/parque.jpg
