feat: cocina background

--- a/src/config/screens.yaml
+++ b/src/config/screens.yaml
@@ -5,3 +5,5 @@ screens:
     background: img/backgrounds/map.webp
   parque:
     background: img/backgrounds/park.JPG
+  cocina:
+    background: img/backgrounds/cocina.png
